# learning.nentang.vn-c-plus-plus

./: README.md
duyet-cay-dfs-depth-first-search/: data_input.txt  duyet_cay_dfs.cpp  test.txt
nang-cao/lab1/: lab1_1.cpp  lab1_2.cpp  lab1_3.cpp  lab1_4.cpp  lab1_4_output.OUT  lab1_5.cpp  lab1_6.cpp
nang-cao/lab2/: lab_2_1.cpp  lab_2_1_input.INP  lab_2_2.cpp  lab_2_2_output.OUT
nang-cao/lab3/: lab_3_1.cpp  lab_3_1_output.OUT  lab_3_2.cpp  lab_3_2_output.OUT
nang-cao/lab4/: lab_4.cpp  lab_4_output.OUT
nang-cao/lab5/: lab_5.cpp  lab_5_1.cpp  lab_5_1_input.INP  lab_5_input.INP  lab_5_output.OUT
nang-cao/lab6/: lab_6.cpp  lab_6_1.cpp  lab_6_output.OUT
nang-cao/lab7/: lab_7.cpp  lab_7_input.INP
nang-cao/lab8/: lab_8.cpp  lab_8_1.cpp  lab_8_input.INP
qt/MediaPlayer/: ButtonControl.qml  CMakeLists.txt  LanguageManager.cpp  LanguageManager.h  Main.qml  SongDelegate.qml  SongModel.cpp  SongModel.h  SwitchButton.qml  TagLibReader.cpp  TagLibReader.h  main.cpp  readme.md
qt/MediaPlayer/libs/x64-windows/debug/lib/pkgconfig/: taglib.pc  taglib_c.pc
qt/MediaPlayer/libs/x64-windows/lib/: tag.lib  tag_c.lib
qt/MediaPlayer/libs/x64-windows/lib/pkgconfig/: taglib.pc  taglib_c.pc
qt/MediaPlayer/libs/x64-windows/share/taglib/: taglib-config.cmake  taglib-targets-debug.cmake  taglib-targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
qt/MediaPlayer/libs/x64-windows/share/utfcpp/: vcpkg.spdx.json  vcpkg_abi_info.txt
qt/MediaPlayer/libs/x64-windows/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
qt/MediaPlayer/libs/x64-windows/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
qt/MediaPlayer/libs/x64-windows/share/zlib/: vcpkg.spdx.json  vcpkg_abi_info.txt
qt/MediaPlayer/translations/: lang_en_US.ts  lang_vi_VN.ts
qt/doan/code-sample/HomeScreen/: HomeScreen.pro  applicationitem.cpp  applicationitem.h  applications.xml  applicationsmodel.cpp  applicationsmodel.h  climate.cpp  climate.h  main.cpp  qml.qrc  xmlreader.cpp  xmlreader.h
qt/doan/code-sample/HomeScreen/App/Climate/: Climate.qml
qt/doan/code-sample/HomeScreen/App/Map/: Map.qml
qt/doan/code-sample/HomeScreen/App/Media/: AppHeader.qml  ButtonControl.qml  Media.qml  MediaInfoControl.qml  PlaylistView.qml  SwitchButton.qml  player.cpp  player.h  playlistmodel.cpp  playlistmodel.h
qt/doan/code-sample/HomeScreen/App/Phone/: Phone.qml
qt/doan/code-sample/HomeScreen/App/Radio/: Radio.qml
qt/doan/code-sample/HomeScreen/App/Settings/: Settings.qml
qt/doan/code-sample/HomeScreen/App/Video/: Video.qml
qt/doan/code-sample/HomeScreen/Qml/: AppButton.qml  ClimateWidget.qml  HomeWidget.qml  MapWidget.qml  MediaWidget.qml  StatusBar.qml  main.qml
qt/doan/code-sample/HomeScreen/Qml/Common/: Button.qml
